--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,8 +3,7 @@ runtime: python3
 build:
   commands:
     build:
-      - pip install pipenv
-      - pipenv install 
+      - pip install -r requirements.txt
 run: 
   runtime-version: 3.7
   command: python app.py
