--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -6,4 +6,4 @@ build:
       - pip install -r requirements.txt
 run: 
   runtime-version: 3.7
-  command: python app.py
+  command: python changeApp.py
